--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -185,6 +185,7 @@
 @import "components/navbar.scss";
 @import "components/footer.scss";
 @import "components/charts.scss";
+@import "components/piechart-popup.scss";
 @import "components/text.scss";
 @import "components/images.scss";
 @import "components/font-awesome.scss";
