--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -310,8 +310,7 @@ h2 {
   font-size: 2.5rem; }
 
 img {
-  width: 620px;
-  /*Different image widths based on viewport size*/ }
+  width: 620px; }
   @media (min-width: 768px) {
     img {
       width: 430px; } }
