--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -72,7 +72,8 @@ section {
 hr {
   border-top: 4px solid rgba(0, 0, 0, 0.1); }
 
-/* No JS fallback */
+/* No JS fallback
+-------------------- */
 #no-js-display {
   display: none; }
 
