--- a/assets/stylesheets/components/images.scss
+++ b/assets/stylesheets/components/images.scss
@@ -6,13 +6,13 @@ img {
     width: 620px;
     
     //Different image widths based on viewport size
-    @include mq(768px) {
+    @include mqWidth(768px) {
         width: 430px;
     }
-    @include mq(1114px) {
+    @include mqWidth(1114px) {
         width: 660px;
     }
-    @include mq(1266px) {
+    @include mqWidth(1266px) {
         width: initial;
     }
 }
