--- a/assets/stylesheets/components/navbar.scss
+++ b/assets/stylesheets/components/navbar.scss
@@ -5,7 +5,7 @@ h1 {
     font-size: 1.5rem;
     color: $pureWhite;
     @extend %force-center;
-    @include mq(1110px) {
+    @include mqWidth(1110px) {
         font-size: 2.5rem;
     }
 }
@@ -23,7 +23,7 @@ h1 {
            size: 1.2rem;
        }
        color: $pureWhite;
-        @include mq(1110px) {
+        @include mqWidth(1110px) {
             font-size: 2rem;
         }
     }
