Imported Inconsolata font and applied to chart axes

--- a/assets/stylesheets/components/charts.scss
+++ b/assets/stylesheets/components/charts.scss
@@ -28,6 +28,10 @@
     }
 }
 
+.x-axis-label, .y-axis-label {
+    font-family: 'Inconsolata', monospace;
+}
+
 select {
     @extend %force-center;
     padding: 10px;
