Added alert for users with non-hover enabled devices

--- a/assets/stylesheets/components/navbar.scss
+++ b/assets/stylesheets/components/navbar.scss
@@ -29,6 +29,13 @@ h1 {
     }
 }
 
+.alert {
+    display: none;
+    @include mqHover(none) {
+        display: block;
+    }
+}
+
 /* Chart Icons */
 .fa-div {
     font-size: 50px;
