--- a/assets/stylesheets/components/no-js.scss
+++ b/assets/stylesheets/components/no-js.scss
@@ -29,7 +29,7 @@
             }
         }
     }
-    #loader-wrapper, nav, main, footer {
+    #loader-wrapper, nav, .alert, main, footer {
     display: none; //Remove all other elements except the no-js-display
     }
 }
