--- a/assets/stylesheets/components/charts.scss
+++ b/assets/stylesheets/components/charts.scss
@@ -9,6 +9,12 @@
         text-align: center;
         margin-bottom: -5px; //Bring the instruction text close to the select boxes
     }
+    p:nth-child(2) {
+        font: {
+            size: 0.8rem;
+            style: italic;
+        }
+    }
 }
 #total-emissions-over-time {
     .line {
