--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -267,6 +267,9 @@ footer {
 .selector-container p {
   text-align: center;
   margin-bottom: -5px; }
+.selector-container p:nth-child(2) {
+  font-size: 0.8rem;
+  font-style: italic; }
 
 #total-emissions-over-time .line {
   stroke-width: 2.5px; }
