--- a/assets/stylesheets/components/structure.scss
+++ b/assets/stylesheets/components/structure.scss
@@ -3,7 +3,6 @@
 
 //Import Fonts
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-@import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono');
 @import url('https://fonts.googleapis.com/css?family=Inconsolata');
 
 body {
@@ -20,10 +19,7 @@ section {
 
 h2 {
     @extend %force-center;
-    font: {
-        family: 'Ubunto Mono', monospace;
-        size: 2.5rem;
-    }
+    font-size: 2.5rem;
 }
 
 hr {
