--- a/assets/stylesheets/components/images.scss
+++ b/assets/stylesheets/components/images.scss
@@ -1,18 +1,26 @@
 /* Image Styling
 -------------------- */
+figure {
+    @extend %force-center;
+    max-width: 450px;
+    @include mqWidth(992px) {
+        float: right;
+    }
+}
 
 img {
     @extend %force-center;
-    width: 620px;
+//     width: 620px;
     
-    //Different image widths based on viewport size
-    @include mqWidth(768px) {
-        width: 430px;
-    }
-    @include mqWidth(1114px) {
-        width: 660px;
-    }
-    @include mqWidth(1266px) {
-        width: initial;
-    }
+//     //Different image widths based on viewport size
+//     @include mqWidth(768px) {
+//         width: 430px;
+//     }
+//     @include mqWidth(1114px) {
+//         width: 660px;
+//     }
+//     @include mqWidth(1266px) {
+//         width: initial;
+//     }
+// }
 }
