--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -55,7 +55,7 @@
 --------------------*/
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 @import url("https://fonts.googleapis.com/css?family=Inconsolata");
-body, h2, .force-center, h1, .selector-container, select, .popup, img {
+body, h2, .force-center, h1, .selector-container, select, .popup, figure, img {
   margin: 15px auto;
   display: block; }
 
@@ -332,16 +332,10 @@ select {
 
 /* Image Styling
 -------------------- */
-img {
-  width: 620px; }
-  @media (min-width: 768px) {
-    img {
-      width: 430px; } }
-  @media (min-width: 1114px) {
-    img {
-      width: 660px; } }
-  @media (min-width: 1266px) {
-    img {
-      width: initial; } }
+figure {
+  max-width: 450px; }
+  @media (min-width: 992px) {
+    figure {
+      float: right; } }
 
 /*# sourceMappingURL=style.css.map */
