--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -55,7 +55,7 @@
 --------------------*/
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 @import url("https://fonts.googleapis.com/css?family=Inconsolata");
-body, h2, .force-center, h1, .selector-container, select, .popup, figure, img {
+body, h2, .force-center, h1, .selector-container, select, .popup, figure, .img-figure img {
   margin: 15px auto;
   display: block; }
 
@@ -332,10 +332,10 @@ select {
 
 /* Image Styling
 -------------------- */
-figure {
+.img-figure {
   max-width: 450px; }
   @media (min-width: 992px) {
-    figure {
+    .img-figure {
       float: right; } }
 
 /*# sourceMappingURL=style.css.map */
