--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -55,7 +55,7 @@
 --------------------*/
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 @import url("https://fonts.googleapis.com/css?family=Inconsolata");
-body, h2, .force-center, h1, .selector-container, select, .popup, figure, .img-figure img {
+body, h2, .force-center, h1, .selector-container, select, .reset-button, .popup, figure, .img-figure img {
   margin: 15px auto;
   display: block; }
 
@@ -287,6 +287,39 @@ footer {
 select {
   padding: 10px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5); }
+
+/* Reset Button */
+button:focus {
+  outline: none; }
+
+.reset-button {
+  background-color: #f2f2f2;
+  background-image: linear-gradient(to bottom, #f2f2f2, #f2f2f2);
+  border: 1px solid #bfbfbf;
+  box-shadow: inset 0 1px 0 white, inset 0 -1px 0 #d9d9d9, inset 0 0 0 1px #f2f2f2, 0 2px 4px rgba(0, 0, 0, 0.2);
+  color: #000000;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  border-radius: 3px;
+  cursor: pointer;
+  display: block;
+  font-family: Verdana, sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 20px;
+  padding: 9px 16px 9px;
+  transition: all 20ms ease-out;
+  vertical-align: top;
+  width: 200px; }
+  .reset-button:hover, .reset-button:focus {
+    background: #f2f2f2;
+    border-color: #8c8c8c;
+    box-shadow: inset 0 1px 0 white, inset 0 -1px 0 #d9d9d9, inset 0 0 0 1px #f2f2f2; }
+  .reset-button:active {
+    background: #f2f2f2;
+    box-shadow: inset 0 2px 3px rgba(0, 0, 0, 0.2); }
+  .reset-button .fa {
+    color: #bfbfbf;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3); }
 
 /* Piechart Informative Popup
 -------------------- */
