Added navbar background image to variable . Added  to navbar and footer

--- a/assets/stylesheets/helpers/variables.scss
+++ b/assets/stylesheets/helpers/variables.scss
@@ -5,6 +5,9 @@ $pureBlack : #000000;
 $backgroundGreen: #2a9445;
 $loaderGreen: #9bcd64;
 
+/* Background Image */
+$bgImage: url("../images/color5.png");
+
 /* Structure */
 $minWidth: 758px;
 $maxWidth: 1990px;
