--- a/assets/stylesheets/components/navbar.scss
+++ b/assets/stylesheets/components/navbar.scss
@@ -13,7 +13,7 @@ h1 {
 .navbar {
     background: {
         color: $backgroundGreen; //Backup background color in case failure to load image
-        image: url("../images/color5.png");
+        image: $bgImage;
     }
     border-bottom: 2px solid $pureBlack;
     flex-direction: column; //Bootstrap navbars are display: flex by default, so this declaration ensures the titles are stacked properly
