--- a/assets/stylesheets/components/structure.scss
+++ b/assets/stylesheets/components/structure.scss
@@ -35,6 +35,7 @@ footer {
     margin-top: 50px;
     padding-top: 10px;
     border-top: 1px solid rgba(0,0,0,0.2);
+    background-image: $bgImage;
     a {
         margin: 0 20px;
     }
