Added  to footer a and footer p

--- a/assets/stylesheets/components/structure.scss
+++ b/assets/stylesheets/components/structure.scss
@@ -38,10 +38,12 @@ footer {
     background-image: $bgImage;
     a {
         margin: 0 20px;
+        color: $pureWhite;
     }
     p {
         font-size: 0.75rem;
         margin-top: -10px;
+        color: $pureWhite;
     }
 }
 
