Set footer a hover color to

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -91,6 +91,8 @@ footer {
   footer a {
     margin: 0 20px;
     color: #ffffff; }
+    footer a:hover {
+      color: #ffffff; }
   footer p {
     font-size: 0.75rem;
     margin-top: -10px;
