--- a/assets/stylesheets/components/structure.scss
+++ b/assets/stylesheets/components/structure.scss
@@ -39,6 +39,9 @@ footer {
     a {
         margin: 0 20px;
         color: $pureWhite;
+        &:hover {
+            color: $pureWhite;
+        }
     }
     p {
         font-size: 0.75rem;
