Corrected error, adding highlights-figure as a class rather than an ID in index.html. Styled highlights-figure font-weight: bold

--- a/assets/stylesheets/components/charts.scss
+++ b/assets/stylesheets/components/charts.scss
@@ -1,6 +1,10 @@
 /* Chart Styling
 -------------------- */
 
+.highlights-figure {
+    font-weight: bold;
+}
+
 .selector-container {
     @extend %force-center;
     border: 1px solid $pureBlack;
