Styled .highlights-figure font-weight and size

--- a/assets/stylesheets/components/charts.scss
+++ b/assets/stylesheets/components/charts.scss
@@ -2,7 +2,16 @@
 -------------------- */
 
 .highlights-figure {
-    font-weight: bold;
+    font: {
+        weight: bold;
+        size: 1.5rem;
+    }
+    span {
+        font: {
+            weight: bold;
+            size: 1.5rem;
+        }
+    }
 }
 
 .selector-container {
