--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -268,7 +268,11 @@ h1 {
 /* Chart Styling
 -------------------- */
 .highlights-figure {
-  font-weight: bold; }
+  font-weight: bold;
+  font-size: 1.5rem; }
+  .highlights-figure span {
+    font-weight: bold;
+    font-size: 1.5rem; }
 
 .selector-container {
   border: 1px solid #000000;
