--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -102,6 +102,9 @@ footer {
   min-height: 80px; }
 
 /* ADD TO SEPARATE SCSS FILE?? */
+.fa-li {
+  margin-left: 58px; }
+
 ul {
   list-style-type: none; }
 
