Tweaked font-size .fa-li

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -103,7 +103,8 @@ footer {
 
 /* ADD TO SEPARATE SCSS FILE?? */
 .fa-li {
-  margin-left: 58px; }
+  margin-left: 58px;
+  font-size: 0.85rem; }
 
 ul {
   list-style-type: none; }
