--- a/assets/stylesheets/components/structure.scss
+++ b/assets/stylesheets/components/structure.scss
@@ -24,7 +24,9 @@ h2 {
 }
 
 hr {
-    border-top: 4px solid rgba(0,0,0,.1);
+    background-image: $bgImage;
+    height: 5px;
+    border-top: 1px solid rgba(0,0,0,.1);
 }
 
 footer {
