Adjusted transition time .reset-button

--- a/assets/stylesheets/components/charts.scss
+++ b/assets/stylesheets/components/charts.scss
@@ -80,7 +80,7 @@ button {
     font-size: 12px;
     line-height: 20px;
     padding: 9px 16px 9px;
-    transition: all 20ms ease-out;
+    transition: all 100ms ease-out; //Hover effect transition
     width: 200px;
     &:hover, &:focus {
         background: #f2f2f2;
