Refactored .highlights-figure span declarations

--- a/assets/stylesheets/components/charts.scss
+++ b/assets/stylesheets/components/charts.scss
@@ -1,16 +1,10 @@
 /* Chart Styling
 -------------------- */
 
-.highlights-figure {
+.highlights-figure, .highlights-figure span {
     font: {
         weight: bold;
         size: 1.5rem;
-    }
-    span {
-        font: {
-            weight: bold;
-            size: 1.5rem;
-        }
     }
 }
 
