--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -277,12 +277,9 @@ h1 {
 
 /* Chart Styling
 -------------------- */
-.highlights-figure {
+.highlights-figure, .highlights-figure span {
   font-weight: bold;
   font-size: 1.5rem; }
-  .highlights-figure span {
-    font-weight: bold;
-    font-size: 1.5rem; }
 
 .selector-container {
   border: 1px solid #000000;
