Deleted unnecessary 'scss' in imports style.scss

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -1,12 +1,12 @@
 /* Imports */
-@import "helpers/variables.scss";
-@import "helpers/mixins.scss";
-@import "helpers/placeholders.scss";
+@import "helpers/variables";
+@import "helpers/mixins";
+@import "helpers/placeholders";
 
-@import "components/structure.scss";
-@import "components/no-js.scss";
-@import "components/loader.scss";
-@import "components/navbar.scss";
-@import "components/charts.scss";
-@import "components/piechart-popup.scss";
-@import "components/images.scss";
+@import "components/structure";
+@import "components/no-js";
+@import "components/loader";
+@import "components/navbar";
+@import "components/charts";
+@import "components/piechart-popup";
+@import "components/images";
