--- a/assets/stylesheets/components/structure.scss
+++ b/assets/stylesheets/components/structure.scss
@@ -28,6 +28,10 @@ hr {
     border-top: 2px solid rgba(0,0,0,.1);
 }
 
+.highlights {
+    border: 2px solid #3ab33a;
+}
+
 footer {
     min-width: $minWidth; //Prevent the footer being squashed down on smaller viewports
     width: 100%;
