--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -37,6 +37,9 @@ hr {
   height: 5px;
   border-top: 2px solid rgba(0, 0, 0, 0.1); }
 
+.highlights {
+  border: 2px solid #3ab33a; }
+
 footer {
   min-width: 758px;
   width: 100%;
