--- a/assets/stylesheets/components/structure.scss
+++ b/assets/stylesheets/components/structure.scss
@@ -17,6 +17,19 @@ body {
 
 section {
     margin-top: 20px;
+    max-width: 99%;
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: .25rem;
+}
+
+.section-styles {
+    max-width: 99%;
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: .25rem;    
 }
 
 h2 {
@@ -29,37 +42,37 @@ hr {
     border-top: 2px solid rgba(0,0,0,.1);
 }
 
-.intro-text {
-    max-width: 99%;
-    background-color: white;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: .25rem;
-}
+// .intro-text {
+//     max-width: 99%;
+//     background-color: white;
+//     margin-left: auto;
+//     margin-right: auto;
+//     border-radius: .25rem;
+// }
 
-.highlights {
-    max-width: 99%;
-    background-color: white;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: .25rem;
-}
+// .highlights {
+//     max-width: 99%;
+//     background-color: white;
+//     margin-left: auto;
+//     margin-right: auto;
+//     border-radius: .25rem;
+// }
 
-.total-time {
-    max-width: 99%;
-    background-color: white;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: .25rem;
-}
+// .total-time {
+//     max-width: 99%;
+//     background-color: white;
+//     margin-left: auto;
+//     margin-right: auto;
+//     border-radius: .25rem;
+// }
 
-.total-vehicle {
-    max-width: 99%;
-    background-color: white;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: .25rem;
-}
+// .total-vehicle {
+//     max-width: 99%;
+//     background-color: white;
+//     margin-left: auto;
+//     margin-right: auto;
+//     border-radius: .25rem;
+// }
 
 footer {
     min-width: $minWidth; //Prevent the footer being squashed down on smaller viewports
