--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -29,7 +29,19 @@ body {
   background-color: #eaeaea; }
 
 section {
-  margin-top: 20px; }
+  margin-top: 20px;
+  max-width: 99%;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: .25rem; }
+
+.section-styles {
+  max-width: 99%;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: .25rem; }
 
 h2 {
   font-size: 2.5rem; }
@@ -37,34 +49,6 @@ h2 {
 hr {
   height: 5px;
   border-top: 2px solid rgba(0, 0, 0, 0.1); }
-
-.intro-text {
-  max-width: 99%;
-  background-color: white;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: .25rem; }
-
-.highlights {
-  max-width: 99%;
-  background-color: white;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: .25rem; }
-
-.total-time {
-  max-width: 99%;
-  background-color: white;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: .25rem; }
-
-.total-vehicle {
-  max-width: 99%;
-  background-color: white;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: .25rem; }
 
 footer {
   min-width: 758px;
