--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -275,6 +275,9 @@ h1 {
 .x-axis-label, .y-axis-label {
   font-family: 'Inconsolata', monospace; }
 
+.tick {
+  font-size: 1rem; }
+
 select {
   padding: 10px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5); }
