--- a/assets/stylesheets/components/structure.scss
+++ b/assets/stylesheets/components/structure.scss
@@ -30,19 +30,12 @@ body {
 
 .section-styles {
     max-width: 98%;
-    background-color: white;
-    margin-left: 1%;
-    /* margin-right: 20px; */
-    margin-top: 20px;
-    border-radius: .25rem;
+    @extend %section-styles
 }
 
 .section-styles-sm-l {
     width: 48.5%;
-    background-color: white;
-    border-radius: .25rem;
-    margin-left: 1%;
-    margin-top: 20px;
+    @extend %section-styles
 }
 
 h2 {
