Renamed section-styles-sm-l to section-styles-sm

--- a/assets/stylesheets/components/structure.scss
+++ b/assets/stylesheets/components/structure.scss
@@ -33,7 +33,7 @@ body {
     @extend %section-styles
 }
 
-.section-styles-sm-l {
+.section-styles-sm {
     max-width: 48.5%;
     @extend %section-styles
 }
