--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -17,7 +17,7 @@ body, h2, .force-center, h1, .selector-container, select, .reset-button, .popup,
   margin: 15px auto;
   display: block; }
 
-.section-styles, .section-styles-sm-l {
+.section-styles, .section-styles-sm {
   background-color: #ffffff;
   margin-left: 1%;
   margin-top: 20px;
@@ -39,7 +39,7 @@ body {
 .section-styles {
   max-width: 98%; }
 
-.section-styles-sm-l {
+.section-styles-sm {
   max-width: 48.5%; }
 
 h2 {
