--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -13,7 +13,7 @@
 --------------------*/
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 @import url("https://fonts.googleapis.com/css?family=Inconsolata");
-body, h2, .force-center, h1, .selector-container, select, .reset-button, .popup, figure, .img-figure img {
+h2, .force-center, h1, .selector-container, select, .reset-button, .popup, figure, .img-figure img {
   margin: 15px auto;
   display: block; }
 
